--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,8 @@ jobs:
         with:
             java-version: '11.x'
 
+      - name: Install node.js packages
+        run: nmp install
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
