--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,8 @@ jobs:
             java-version: '11.x'
 
       - name: Install node.js packages
-        run: nmp install
+        run: npm install
+        
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
