--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Install node.js packages
         run: npm install
         
+      - name: Lancement test unitaires
+        run: ci:frontend:test
+      
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
