--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         run: npm install
         
       - name: Lancement test unitaires
-        run: test
+        run: npm run ci:frontend:test
       
       # Runs a single command using the runners shell
       - name: Run a one-line script
